prevent footer jump

--- a/magda-web-client/src/AppContainer.scss
+++ b/magda-web-client/src/AppContainer.scss
@@ -2,6 +2,7 @@
 
 
 .app-container{
+  min-height: 1000px;
   .nav-table{
     padding: 24px 0;
   }
